--- a/yaml/kiali.yaml
+++ b/yaml/kiali.yaml
@@ -20,7 +20,7 @@ spec:
     - server auth
     - client auth
   dnsNames:
-    - "kaili.{DOMAIN}"
+    - "kiali.{DOMAIN}"
   issuerRef:
     kind: ClusterIssuer
     group: cert-manager.io
@@ -562,34 +562,6 @@ spec:
           configMap:
             name: kiali-cabundle
             optional: true
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  labels:
-    app.kubernetes.io/instance: traefik
-    app.kubernetes.io/managed-bu: tmax-cloud
-    app.kubernetes.io/name: api-gateway
-  name: kiali
-  namespace: istio-system
-spec:
-  secretName: kiali-secret
-  commonName: api-gateway
-  subject:
-    organizations:
-      - "tmax-cloud"
-  isCA: false
-  usages:
-    - digital signature
-    - key encipherment
-    - server auth
-    - client auth
-  dnsNames:
-    - "kaili.{DOMAIN}"
-  issuerRef:
-    kind: ClusterIssuer
-    group: cert-manager.io
-    name: tmaxcloud-issuer
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
