mod: apply for kiali 1.59.0

--- a/kiali.conf
+++ b/kiali.conf
@@ -2,3 +2,4 @@ kialiVersion=v1.21
 hyperAuthIP={HYPERAUTH_IP} # ex) hyperauth.tmaxcloud.org
 clientId={CLIENT_ID} # ex) kiali
 customDomainName={CUSTOM_DOMAIN_NAME} # ex) tmaxcloud.org
+kialiLoglevel=info # ex) trace, debug, info, warn, error, fatal
