--- a/yaml/kiali.yaml
+++ b/yaml/kiali.yaml
@@ -11,32 +11,39 @@ rules:
     resources:
       - configmaps
       - endpoints
-      - namespaces
-      - nodes
-      - pods
       - pods/log
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups: [""]
+    resources:
+      - namespaces
+      - pods
       - replicationcontrollers
       - services
     verbs:
       - get
       - list
       - watch
+      - patch
+  - apiGroups: [""]
+    resources:
+      - pods/portforward
+    verbs:
+      - create
+      - post
   - apiGroups: ["extensions", "apps"]
     resources:
       - deployments
       - replicasets
       - statefulsets
+      - daemonsets
     verbs:
       - get
       - list
       - watch
-  - apiGroups: ["autoscaling"]
-    resources:
-      - horizontalpodautoscalers
-    verbs:
-      - get
-      - list
-      - watch
+      - patch
   - apiGroups: ["batch"]
     resources:
       - cronjobs
@@ -45,12 +52,13 @@ rules:
       - get
       - list
       - watch
+      - patch
   - apiGroups:
-    - config.istio.io
     - networking.istio.io
-    - authentication.istio.io
-    - rbac.istio.io
     - security.istio.io
+    - extensions.istio.io
+    - telemetry.istio.io
+    - gateway.networking.k8s.io
     resources: ["*"]
     verbs:
       - create
@@ -59,6 +67,29 @@ rules:
       - list
       - patch
       - watch
+  - apiGroups: ["app.openshift.io"]
+    resources:
+      - deploymentconfigs
+    verbs:
+      - get
+      - list
+      - watch
+      - patch
+  - apiGroups: ["project.openshift.io"]
+    resources:
+      - projects
+    verbs:
+      - get
+  - apiGroups: ["route.openshift.io"]
+    resources:
+      - routes
+    verbs:
+      - get
+  - apiGroups: ["authentication.k8s.io"]
+    resources:
+      - tokenreviews
+    verbs:
+      - create
   - apiGroups: ["monitoring.kiali.io"]
     resources:
       - monitoringdashboards
@@ -78,28 +109,33 @@ rules:
     resources:
       - configmaps
       - endpoints
-      - namespaces
-      - nodes
-      - pods
       - pods/log
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups: [""]
+    resources:
+      - namespaces
+      - pods
       - replicationcontrollers
       - services
     verbs:
       - get
       - list
       - watch
+  - apiGroups: [""]
+    resources:
+      - pods/portforward
+    verbs:
+      - create
+      - post
   - apiGroups: ["extensions", "apps"]
     resources:
       - deployments
       - replicasets
       - statefulsets
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups: ["autoscaling"]
-    resources:
-      - horizontalpodautoscalers
+      - daemonsets
     verbs:
       - get
       - list
@@ -112,17 +148,40 @@ rules:
       - get
       - list
       - watch
+      - patch
   - apiGroups:
-    - config.istio.io
-    - networking.istio.io
-    - authentication.istio.io
-    - rbac.istio.io
-    - security.istio.io
+      - networking.istio.io
+      - security.istio.io
+      - extensions.istio.io
+      - telemetry.istio.io
+      - gateway.networking.k8s.io
     resources: ["*"]
     verbs:
       - get
       - list
       - watch
+  - apiGroups: ["app.openshift.io"]
+    resources:
+      - deploymentconfigs
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups: ["project.openshift.io"]
+    resources:
+      - projects
+    verbs:
+      - get
+  - apiGroups: ["route.openshift.io"]
+    resources:
+      - routes
+    verbs:
+      - get
+  - apiGroups: ["authentication.k8s.io"]
+    resources:
+      - tokenreviews
+    verbs:
+      - create
   - apiGroups: ["monitoring.kiali.io"]
     resources:
       - monitoringdashboards
@@ -168,7 +227,7 @@ data:
     istio_component_namespaces:
       grafana: monitoring
       tracing: istio-system
-      pilot: istio-system
+      istiod: istio-system
       prometheus: monitoring
     istio_namespace: istio-system
     auth:
@@ -180,16 +239,25 @@ data:
     deployment:
       accessible_namespaces: ['**']
     login_token:
-      signing_key: "wl5oStULbP"
+      signing_key: "0123456789012345"
     server:
       port: 20001
       web_root: /api/kiali
+      metrics_enabled: true
+      metrics_port: 9090
     external_services:
       istio:
-        url_service_version: http://istio-pilot.istio-system:8080/version
+        root_namespace: istio-system
+        components:
+          - app_label: istiod
+            is_core: true
+          - app_label: ingressgateway
+            is_core: true
+            is_proxy: true
+        url_service_version: http://istiod.istio-system.svc:15014/version
       tracing:
         url:
-        in_cluster_url: http://tracing/api/jaeger
+        in_cluster_url: http://jaeger-query.istio-system.svc:16685
       grafana:
         url:
         in_cluster_url: http://grafana.monitoring:3000
@@ -273,13 +341,13 @@ spec:
         - /opt/kiali/kiali
         - -config
         - /kiali-configuration/config.yaml
-        - -v
-        - "3"
         env:
         - name: ACTIVE_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: LOG_LEVEL
+          value: {KIALI_LOG_LEVEL}
         image: quay.io/kiali/kiali:{KIALI_VERSION}
         imagePullPolicy: IfNotPresent
         livenessProbe:
@@ -300,26 +368,30 @@ spec:
         resources:
           requests:
             cpu: 10m
-            memory: 50Mi
+            memory: 64Mi
           limits:
             cpu: 50m
-            memory: 100Mi
+            memory: 512Mi
         volumeMounts:
         - mountPath: /kiali-configuration
           name: kiali-configuration
         - mountPath: /kiali-cert
           name: kiali-cert
+          readOnly: true
         - mountPath: /kiali-secret
           name: kiali-secret
       serviceAccountName: kiali-service-account
       volumes:
       - configMap:
           name: kiali
+          items:
+            key: config.yaml
+            path: config.yaml
         name: kiali-configuration
       - name: kiali-cert
         secret:
           optional: true
-          secretName: istio.kiali-service-account
+          secretName: kiali-service-account
       - name: kiali-secret
         secret:
           optional: true
@@ -340,6 +412,9 @@ spec:
     - name: http-kiali
       protocol: TCP
       port: 20001
+    - name: http-metrics
+      protocol: TCP
+      port: 9090
   selector:
     app: kiali
 ---
